--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CK5JJ4SS9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2CK5JJ4SS9');
+</script>
   <link rel="stylesheet" href="./public/semantic/semantic.min.css">
   <link rel="stylesheet" href="./public/css/component.scss">
   <link rel="stylesheet" href="./public/css/header/index_header.css">
